demo/aks-only/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: demo
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: web # has to match .spec.template.metadata.labels
  minReadySeconds: 5 # how long after a new pod is ready before removing an old pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: web
        image: paulgilchrist/mongodb-web:latest
        imagePullPolicy: Always
        readinessProbe: # More heavyweight check than liveness with more details returned
          tcpSocket: # Always prefer to use httpGet if supported by container
            port: 80
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 30 
        livenessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - containerPort: 80
          name: web
