demo/aks-only/queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-service
  namespace: demo
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: mc_aks_testing_westus  
spec:
  loadBalancerIP: 20.47.116.101 # Must be standard if AKS LoadBalancer is standard, basic if AKS LoadBalancer is basic
  ports:
    - port: 15672
      name: http
    - port: 5672
      name: amqp
  selector:
    app: queue
  type: LoadBalancer # so a listner can be outside the cluster without needing an ingress
